--- a/client/src/components/chat/Chat.css
+++ b/client/src/components/chat/Chat.css
@@ -12,29 +12,39 @@ body {
   background-color: #fff;
 }
 .Container2 {
-  display: flex;
-  flex-direction: column;
   border-left: 1px solid #c4c5c9;
   height: 100vh;
+  width: 20%;
 }
 
-.container {
+.Container4 {
+  margin-left: 20%;
+}
+
+.Container3 {
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+
+  margin-left: 20%;
+}
+
+.containers {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background: #ffffff;
-
-  border-radius: 8px;
+  margin-right: 5%;
+  border-radius: 15px;
   height: 90%;
-  width: 80%;
+  width: 100%;
 }
 
 .btn-made {
-  display: flex;
   align-items: center;
   height: 6vmin;
-  width: 30%;
-  margin-left: 30%;
+  margin-left: 10px;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
