--- a/client/src/components/chat/messages/Messages.css
+++ b/client/src/components/chat/messages/Messages.css
@@ -3,3 +3,15 @@
   overflow: auto;
   flex: auto;
 }
+.message::webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+.start {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #c6c6c9;
+}
