--- a/client/src/components/home/RoomList.css
+++ b/client/src/components/home/RoomList.css
@@ -1,42 +1,65 @@
-.container {
-  position: relative;
-
-  width: 100%;
-  height: 100vh;
-
-  margin-left: 300px;
+body {
+  background-color: #fafafa;
 }
+
+.containerss {
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: 23%;
+  padding-right: 15px;
+  padding-left: 15px;
+  min-height: 100vh;
+}
+
+.teams____logo {
+  height: 40px;
+  width: 40px;
+  display: inline;
+}
+
+.img_title_box {
+  display: flex;
+  flex-direction: row;
+  padding-top: 10px;
+}
+
 .cardss {
-  width: 60%;
-  height: 80%;
-  max-height: 300px;
+  width: 15vw;
+  display: flex;
+  height: 40vmin;
+  flex-direction: column;
+  justify-content: space-between;
+  white-space: pre-wrap;
   color: white;
   padding: auto;
+
   text-align: center;
+
   background: #cdd1ff;
   border-radius: 10px;
-  box-shadow: 10px 10px 25px #cdd1ff, -10px -10px 25px #cdd1ffb9;
+  box-shadow: 5px 5px 15px #cdd1ff, -5px -5px 25px #cdd1ffb9;
 }
 .card__container {
   display: grid;
-  width: 100%;
-  height: 100%;
-  grid-template-columns: 2fr 2fr 2fr;
+  grid-gap: 3rem;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   align-items: center;
+  width: 100%;
+
   justify-items: center;
   color: white;
-  padding: 20px;
+  padding: 30px;
 }
 .card__content {
   width: 100%;
-  height: 95%;
+  height: 100%;
 
-  background: #464775;
+  background: #4b4c7a;
   margin: 10px auto;
-  border-radius: 5px;
-  padding: 5px;
+  border-radius: 15px;
+
   cursor: pointer;
-  box-shadow: 16px 16px 44px #cdd1ff81, -16px -16px 44px #cdd1ffc4;
+  box-shadow: 10px 10px 25px #cdd1ff81, -10px -10px 25px #cdd1ffc4;
   transition: 0.3s all ease-in-out;
 }
 .card__content:hover {
@@ -44,16 +67,16 @@
 }
 .card__header {
   text-transform: uppercase;
-  font-size: 20px;
-  margin: 40px auto;
+  font-size: 30px;
+  margin: 30px auto;
 }
 .card__button {
-  padding: 10px;
-  border-radius: 50px;
-  background: #1f75c4;
-  color: white;
-  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background: #6793bd;
+  color: rgb(30, 20, 87);
+
   cursor: pointer;
   border: none;
-  margin: 50px auto;
+  margin: 30px auto;
 }
