--- a/client/src/routes/rooms.css
+++ b/client/src/routes/rooms.css
@@ -31,6 +31,12 @@ video {
   margin: 0 10px;
 }
 
+.teams___logo {
+  height: 60px;
+  width: 60px;
+  margin: auto;
+}
+
 .meet_head {
   display: flex;
   justify-content: center;
@@ -38,13 +44,15 @@ video {
   flex-wrap: wrap;
 
   width: 80vw;
+  height: 5vw;
 
   border-radius: 2%;
-  margin-bottom: 2px;
+  margin-bottom: 15px;
 }
 
 .meet_head_right {
-  flex: 0.8;
+  flex: 0.9;
+  text-align: center;
   display: flex;
   flex-direction: column;
   background-color: #e8edf5;
@@ -54,7 +62,7 @@ video {
 }
 
 .meet_head_left {
-  flex: 0.2;
+  flex: 0.1;
   display: flex;
   flex-direction: column;
   align-items: center;
